Wed Feb 21 18:55:03 GMT 2007  Olly Betts <olly@survex.com>

	* languages/compiler/generator.c: Number m_test and c_test variables
	  to avoid variable shadowing warnings.

Wed Feb 21 18:07:50 GMT 2007  Olly Betts <olly@survex.com>

	* languages/compiler/generator.c: Remove duplicate copy of function
	  resulting from ham-fisted reverting and applying of patches.

Wed Feb 21 18:03:12 GMT 2007  Olly Betts <olly@survex.com>

	* languages/compiler/generator.c,languages/compiler/header.h: Number
	  mlimit variables to avoid variable shadowing warnings.
	* languages/compiler/generator.c: Use "if (foo() == -1) return -1;"
	  which avoids a temporary variable (improving readability of
	  generated code) and producing very slightly faster code.
	* languages/compiler/header.h: Use "#ifdef DISABLE_JAVA" around Java
	  generator specific struct members and prototypes.

Wed Feb 21 17:47:13 GMT 2007  Olly Betts <olly@survex.com>

	* languages/compiler/generator.c: Add "~C" comments to generated
	  source for more operations.

Tue Feb 20 20:24:30 GMT 2007  Olly Betts <olly@survex.com>

	* backends/flint/flint_table.cc,backends/quartz/btree.cc: Ensure
	  both_bases is set to false if we don't have both bases when
	  opening a table using an existing object.

Tue Feb 20 15:57:05 GMT 2007  Olly Betts <olly@survex.com>

	* preautoreconf: Fix to handle generating dependencies on generated
	  objects, at least for the "checked out tree from SVN" case.  Fixing
	  this fully is trickier, but currently this is stopped snapshots
	  from bootstrapping.

Tue Feb 20 14:28:02 GMT 2007  Charlie Hull

	* backends/flint/flint_btreebase.cc,backends/flint/flint_table.cc,
	  backends/quartz/btree.cc: Use MS Windows API calls to delete
	  files and open files we might want to delete while they are
	  still open (i.e. the flint and quartz btree base files).  This
	  fixes a problem when a writer can't discard an old revision at the
	  exact moment a reader is opening it (bug #108).
